Goc 5 justify api naming conventions and chose one
